[package]
name = "greentic-secrets-provider-aws-sm"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "AWS Secrets Manager backend for the Greentic secrets core."
repository = "https://github.com/greenticai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-provider-aws-sm"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[lib]
name = "secrets_provider_aws_sm"

[features]
integration = []
localstack = []
real-aws = []

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-sdk-kms = { workspace = true }
aws-types = { workspace = true }
aws-smithy-types = { workspace = true }
greentic_secrets_spec = { workspace = true }
greentic_secrets_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rustls-native-certs = "0.8"
secrets-provider-tests = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
