[package]
name = "greentic-secrets-provider-azure-kv"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Azure Key Vault backend for the Greentic secrets core."
repository = "https://github.com/greenticai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-provider-azure-kv"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[features]
integration = []
real-azure = []

[lib]
name = "secrets_provider_azure_kv"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
greentic_secrets_spec = { workspace = true }
greentic_secrets_core = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
secrets-provider-tests = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
azure_identity = { workspace = true }
azure_core = { workspace = true }
async-trait = { workspace = true }
