[package]
name = "greentic-secrets-provider-dev"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Local development backend for the Greentic secrets core."
repository = "https://github.com/greenticai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-provider-dev"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[features]
integration = []

[lib]
name = "secrets_provider_dev"

[dependencies]
base64 = { workspace = true }
fs2 = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
greentic_secrets_spec = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
secrets-provider-tests = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
