[package]
name = "greentic-secrets-provider-gcp-sm"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Google Secret Manager backend for the Greentic secrets core."
repository = "https://github.com/greenticai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-provider-gcp-sm"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[features]
integration = []
real-gcp = []

[lib]
name = "secrets_provider_gcp_sm"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
greentic_secrets_spec = { workspace = true }
greentic_secrets_core = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
secrets-provider-tests = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait = { workspace = true }
anyhow = { workspace = true }

