[package]
name = "greentic-secrets-provider-k8s"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Kubernetes Secrets backend for the Greentic secrets core."
repository = "https://github.com/greenticai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-provider-k8s"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[lib]
name = "secrets_provider_k8s"

[features]
default = []
sealedsecrets = []
integration = []

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
greentic_secrets_spec = { workspace = true }
greentic_secrets_core = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
secrets-provider-tests = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

